[project]
name = "url_shortner"
version = "0.0.0"
description = "Scaffolded by keelen."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/url_shortner"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
